--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
     "next": "14.2.2",
