--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dnd-kit/core": "^6.1.0",
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
+    "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
