--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "zod": "^3.23.6"
   },
   "devDependencies": {
+    "@types/react": "18.3.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.5.3"
   }
 }
